--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                               <span class="sr-only">Next</span>
                             </a>
                           <p>
-                            Bademli'nin dağlarında Kiraz üretimide yapmaktayız  😊 😊 😊
+                            Bademli'nin dağlarında Kiraz üretimide yapmaktayız  
                           </p>
                           <a target="_blank" href="https://www.google.com/search?q=kiraz&oq=kiraz&aqs=chrome..69i57j46i433j0i131i433j46i131i433j0i433j46j0i131i433l2.1901j0j9&sourceid=chrome&ie=UTF-8" class="btn btn-primary" title="">
                             Keşfet
