--- a/İletişim.html
+++ b/İletişim.html
@@ -127,6 +127,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-7">
             <p><small>© Copyright 2020 All rights reserved</small></p>
+             <p class="copyright"><small> Creat by fırat </small></p>
           </div>
           <div class="col-xs-12 col-sm-5">
             <p class="text-right">
