--- a/İletişim.html
+++ b/İletişim.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="Dağdan">Dağdan</h1>
+          <h1 class="Dağdan">Dağlardan</h1>
           <p>Meyvenin bir numaralı adresi</p>
           <br>
           <a href="./gallery.html" class="btn btn-default btn-lg" title="">Keşfet</a>
