--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a href="./index.html" title="">Anasayfa</a></li>
           <li><a href="./İletişim.html" title="">İletişim</a></li>
           <li><a href="./gallery.html" title="" class="gallery-tittle">Galeri</a></li>
-
+          <li><a href="./türler.html">Türler</a></li>
 
         </ul>
       </div>
@@ -74,7 +74,7 @@
         <div class="col-xs-12 col-md-8 col-md-offset-2">
           <div class="text-center">
             <h2>Hakkımızda</h2>
-            <p>Yıllara dayanan deneyim <br>                                                                                                                                                                                                                          
+            <p>Sadece müşterilerin doğal ve kaliteli ürünlere daha ucuza ulaşması. <br>                                                                                                                                                                                                                          
 </p>          
 </div>
        </div>
@@ -226,7 +226,6 @@
 
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID
-
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -237,7 +236,6 @@
   ga('create', 'UA-XXXXX-X', 'auto');
   ga('send', 'pageview');
 </script>
-
 --> <script type="text/javascript" src="./main.0cf8b554.js"></script></body>
 
 </html>
