--- a/gallery.html
+++ b/gallery.html
@@ -237,6 +237,8 @@ document.addEventListener("DOMContentLoaded", function (event) {
           <li><a href="./index.html" title="">Anasayfa</a></li>
           <li><a href="./İletişim.html" title="">İletişim</a></li>
           <li><a href="./gallery.html" title="" class="gallery-tittle">Galeri</a></li>
+          <li><a href="./türler.html">Türler</a></li>
+
          </ul>
       </div>
     </div>
@@ -364,7 +366,6 @@ document.addEventListener("DOMContentLoaded", function (event) {
         <div class="row">
           <div class="col-xs-12 col-sm-7">
             <p><small>© Copyright 2020 All rights reserved</small></p>
-		   <p class="copyright"><small> Creat by fırat </small></p>
           </div>
           <div class="col-xs-12 col-sm-5">
             <p class="text-right">
