--- a/İletişim.html
+++ b/İletişim.html
@@ -44,6 +44,8 @@
           <li><a href="./index.html" title="">Anasayfa</a></li>
           <li><a href="./İletişim.html" title="">İletişim</a></li>
           <li><a href="./gallery.html" title="" class="gallery-tittle">Galeri</a></li>
+          <li><a href="./türler.html">Türler</a></li>
+
 
 
         </ul>
@@ -57,10 +59,8 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <h1 class="Dağdan">Dağlardan</h1>
-          <p>Meyvenin bir numaralı adresi</p>
-          <br>
-          <a href="./gallery.html" class="btn btn-default btn-lg" title="">Keşfet</a>
+          <h1 class="Dağdan">İletişim</h1>
+              <br>
         </div>
       </div>
     </div>
@@ -127,7 +127,6 @@
         <div class="row">
           <div class="col-xs-12 col-sm-7">
             <p><small>© Copyright 2020 All rights reserved</small></p>
-             <p class="copyright"><small> Creat by fırat </small></p>
           </div>
           <div class="col-xs-12 col-sm-5">
             <p class="text-right">
